# cairo-syntax-parser

./: Cargo.toml
src/: attribute.rs  common.rs  crate_macros.rs  expr.rs  generic_param.rs  item.rs  lib.rs  macros.rs  reader.rs  utils.rs  writer.rs
src/cformat/: formatter.rs  mod.rs  op.rs  write.rs
src/fmt/: cairo_write.rs  fmt.rs  macros.rs  mod.rs  sizer.rs  write.rs
