[package]
edition.workspace = true
name = "cairo-syntax-parser"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.24.0"
cairo-lang-syntax = "2.15.0"
cairo-lang-macro = "2.15.0"
cairo-lang-parser = "2.15.0"
paste = "1.0"
delegate = "0.13.5"
thiserror = "2.0.17"

[dev-dependencies]
