[package]
name = "cairo-syntax-parser"
edition = "2024"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-lang-macro = "0.2.1"
cairo-lang-parser = "2.15.0"
cairo-lang-syntax = "2.15.0"
delegate = "0.13.5"
paste = "1.0"
salsa = "0.24.0"
starknet-types-core = "0.2.0"
thiserror = "2.0.17"
smallvec = "1.15.1"

[dev-dependencies]
